# nib

./: ;  Cargo.toml  README.md  azure-pipelines.yml  crates.js  help.html  index.html  publish_docs.bash  search-index.js  settings.html  source-files.js  src-files.js
.github/: dependabot.yml
.github/workflows/: rust.yml  rustdoc.yml
data/: diffuse.json  empty.json  spheres.json
doc/: DESIGN.md
docs/: README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
docs/anyhow/: struct.Chain.html  struct.Error.html
docs/bytemuck/: enum.PodCastError.html  trait.Contiguous.html  trait.Pod.html  trait.TransparentWrapper.html  trait.Zeroable.html
docs/cgmath/: struct.AbsDiff.html  struct.Basis2.html  struct.Basis3.html  struct.Decomposed.html  struct.Deg.html  struct.Euler.html  struct.Matrix2.html  struct.Matrix3.html  struct.Matrix4.html  struct.Ortho.html  struct.Perspective.html  struct.PerspectiveFov.html  struct.Point1.html  struct.Point2.html  struct.Point3.html  struct.Quaternion.html  struct.Rad.html  struct.Relative.html  struct.Ulps.html  struct.Vector1.html  struct.Vector2.html  struct.Vector3.html  struct.Vector4.html  trait.AbsDiffEq.html  trait.Bounded.html  trait.One.html  trait.RelativeEq.html  trait.UlpsEq.html  trait.Zero.html
docs/clicolors_control/: all.html  fn.colors_enabled.html  fn.configure_terminal.html  fn.set_colors_enabled.html  index.html
docs/console/: all.html  enum.Alignment.html  enum.Attribute.html  enum.Color.html  enum.Key.html  enum.TermFamily.html  enum.TermTarget.html  fn.colors_enabled.html  fn.measure_text_width.html  fn.pad_str.html  fn.set_colors_enabled.html  fn.strip_ansi_codes.html  fn.style.html  fn.truncate_str.html  fn.user_attended.html  index.html  struct.AnsiCodeIterator.html  struct.Emoji.html  struct.Style.html  struct.StyledObject.html  struct.Term.html  struct.TermFeatures.html
docs/enum_dispatch/: all.html  attr.enum_dispatch.html  index.html
docs/erased_serde/: fn.deserialize.html  index.html  struct.Error.html  (+3 more)
nib/: all.html  fn.main.html  index.html  sidebar-items.js  static.GLOBAL.html
src/: camera.rs  cli.rs  hittable.rs  image_exporter.rs  integrator.rs  main.rs  material.rs  math.rs  ray.rs  renderer.rs  sampler.rs  scene.rs  types.rs
tests/: scene_files.rs
(+2023 files in other folders)
