[package]
name = "nib"
version = "0.2.1"
authors = ["Afnan Enayet <afnan@afnan.io>"]
edition = "2018"
publish = false
documentation = "https://afnan.io/nib"
license = "mit"

[dependencies]
num = "0.4"
cgmath = { version = "0.18", features = ["serde"] }
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
rand = { version = "0.8", features = ["log", "serde1"] }
image = "0.23"
typetag = "0.1"
enum_dispatch = "0.3.5"
indicatif = "0.15"
serde_json = "1.0"
serde_yaml = "0.8"
json5 = "0.3"
anyhow = "1.0"
ron = "0.6"
rayon = "1.5"
mimalloc = { version = "0.1", default-features = false }
float-cmp = "0.8"

[profile.dev]
opt-level = 2 # some optimizations

[profile.release]
codegen-units = 1
lto = "thin"
